--- a/src/app/loan-prompt/loan-prompt.component.html
+++ b/src/app/loan-prompt/loan-prompt.component.html
@@ -1,4 +1,31 @@
-<div style="border: 1px solid black">
-    <header>icon with badge</header>
-    <router-outlet></router-outlet>
+<div class="loan-section">
+    <div class="loan-prompt">
+        <header class="loan-prompt-header">
+            <div class="top-row">
+                <div class="shopping-basket">
+                    <span class="material-symbols-outlined">shopping_basket</span>
+                    <span class="shopping-basket-badge">{{ totalBasketItems }}</span>
+                </div>
+
+                <div class="logo" [inlineSVG]="'/../../assets/snap_finance_logo.svg'"></div>
+            </div>
+
+            <div class="text-row"><span class="text-basic-header">Header</span></div>
+
+            <div class="steps-row">
+                <button
+                    *ngFor="let step of loanStepsWithForm; let i = index"
+                    class="step-index"
+                    [ngClass]="{ selected: currentStep.path === step.path, disabled: step.disabled }"
+                    (click)="!step.disabled ? changeCurrentStep(step) : null"
+                >
+                    {{ i + 1 }}
+                </button>
+            </div>
+        </header>
+
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </div>
 </div>
