--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800&display=swap');
+
+p,
+h1,
+h2,
+span,
+label,
+input,
+select,
+button {
+    font-family: 'Outfit';
+    color: var(--textColor);
+}
+
+.text-basic {
+    color: #000;
+    font-weight: 300;
+    font-size: 0.9rem;
+    margin: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+:root {
+    --textColor: #333333;
+    --backgroundColor: #fff;
+    --hoverColor: #f5f5f5;
+    --borderColor: #dddddd;
+    --primary: #169bd5;
+    --success: #8ec640;
+    --warning: #e81d25;
+}
