--- a/src/app/loan-prompt/loan-prompt.component.scss
+++ b/src/app/loan-prompt/loan-prompt.component.scss
@@ -73,8 +73,12 @@
                     border: 1px solid var(--borderColor);
                     font-weight: 300;
 
-                    &:not(.disabled) {
+                    &:not(.disabled):not(.selected) {
                         cursor: pointer;
+
+                        &:hover {
+                            background-color: var(--hoverColor);
+                        }
                     }
 
                     &.selected {
